fix anchor error and add mobile_navbar_collapsed config

--- a/plugins/teedoc-plugin-theme-default/teedoc_plugin_theme_default/assets/light.css
+++ b/plugins/teedoc-plugin-theme-default/teedoc_plugin_theme_default/assets/light.css
@@ -928,7 +928,7 @@ a.toc-link {
         display: block;
     }
     #navbar #navbar_items {
-        display: block;
+        display: ${mobile_navbar_collapsed};
         padding-right: 0;
     }
     #navbar .sub_items ul {
